fixing dark mode input color issue

--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -1862,10 +1862,6 @@ model-viewer {
   }
 }
 
-.form-control:disabled, .form-control[readonly] {
-  cursor: not-allowed;
-}
-
 
 .list-value-denom {
   font-size: 12px;
